cmake_minimum_required(VERSION 3.4.1)
if(WIN32 AND NOT MINGW)
  if(NOT DEFINED CMAKE_DEBUG_POSTFIX)
    set(CMAKE_DEBUG_POSTFIX "d")
  endif()
  if(NOT DEFINED CMAKE_RELEASE_POSTFIX)
    set(CMAKE_RELEASE_POSTFIX "")
  endif()
  if(NOT DEFINED CMAKE_RELWITHDEBINFO_POSTFIX)
    set(CMAKE_RELWITHDEBINFO_POSTFIX "")
  endif()
  if(NOT DEFINED CMAKE_MINSIZEREL_POSTFIX)
    set(CMAKE_MINSIZEREL_POSTFIX "")
  endif()
endif()
project(GeneticAlgorithm)
include_directories(${CMAKE_SOURCE_DIR})
add_library(GeneticAlgorithm STATIC GeneticAlgorithmBase.cpp GeneticAlgorithmBase.h)

